# WhisperBot

./: LICENSE  README.md  env.template  pyproject.toml
tests/: test_speech2text.py  test_text_split.py
whisperbot/: bot.py  chat.py  models.py  speech2text.py  storage.py  test.py  text_split.py  yt_client.py
